--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" lang="en"
-            ><span class="logo__web">Web</span>Studio</a
+            ><span class="logo--web">Web</span>Studio</a
           >
           <ul class="navigation__list list">
             <li class="navigation__item">
@@ -41,10 +41,10 @@
           </ul>
         </nav>
 
-        <ul class="contact-list list">
-          <li class="contact-list__item">
-            <a class="contact-list__link link" href="mailto:info@devstudio.com"
-              ><svg class="contact-list__icon" width="16px" height="12px">
+        <ul class="contact__list list">
+          <li class="contact__item">
+            <a class="contact__link link" href="mailto:info@devstudio.com"
+              ><svg class="contact__icon" width="16px" height="12px">
                 <use
                   href="./images/backgroundicon/symbol-defs.svg#icon-envelope"
                 ></use>
@@ -52,9 +52,9 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="contact-list__item">
-            <a class="contact-list__link link" href="tel:+380961111111"
-              ><svg class="contact-list__icon" width="10px" height="16px">
+          <li class="contact__item">
+            <a class="contact__link link" href="tel:+380961111111"
+              ><svg class="contact__icon" width="10px" height="16px">
                 <use
                   href="./images/backgroundicon/symbol-defs.svg#icon-smartphone"
                 ></use>
@@ -90,7 +90,7 @@
           </ul>
 
           <!-- examples of works -->
-          <ul class="projects list">
+          <ul class="projects__list list">
             <li class="projects__item">
               <a class="projects__link link" href="">
                 <div class="projects__img-wrapper">
@@ -105,7 +105,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">Технокряк</h3>
                   <p class="projects__type">Веб-сайт</p>
                 </div>
@@ -126,7 +126,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Постер<span lang="en">New Orlean vs Golden Star</span>
                   </h3>
@@ -149,7 +149,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Ресторан <span lang="en">Seafood</span>
                   </h3>
@@ -172,7 +172,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Проект <span lang="en">Prime</span>
                   </h3>
@@ -195,7 +195,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Проект <span lang="en">Boxes</span>
                   </h3>
@@ -218,7 +218,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title" lang="en">
                     Inspiration has no Borders
                   </h3>
@@ -241,7 +241,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Издание <span lang="en">Limited Edition</span>
                   </h3>
@@ -264,7 +264,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title">
                     Проект <span lang="en">LAB</span>
                   </h3>
@@ -287,7 +287,7 @@
                   </p>
                 </div>
 
-                <div class="projects__content-wrapper">
+                <div class="projects__box">
                   <h3 class="projects__title" lang="en">Growing Business</h3>
                   <p class="projects__type">Приложение</p>
                 </div></a
