--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" lang="en"
-            ><span class="logo--web">Web</span>Studio</a
+            ><span class="logo__web">Web</span>Studio</a
           >
           <ul class="navigation__list list">
             <li class="navigation__item">
@@ -524,11 +524,8 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__wrapper">
-          <a
-            class="logo logo--white link"
-            href="./index.html"
-            lang="en"
-            ><span class="logo--web">Web</span>Studio</a
+          <a class="logo logo--white link" href="./index.html" lang="en"
+            ><span class="logo__web">Web</span>Studio</a
           >
           <address class="address">
             <ul>
