--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" lang="en"
-            ><span class="logo--web">Web</span>Studio</a
+            ><span class="logo__web">Web</span>Studio</a
           >
           <ul class="navigation__list list">
             <li class="navigation__item">
@@ -330,36 +330,36 @@
         </div>
         <div>
           <b class="footer__title-join">присоединяйтесь</b>
-          <ul class="social-list list">
-            <li class="social-list__item">
-              <a class="social-list__link link" href="">
-                <svg class="social-list__icon">
+          <ul class="social__list list">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon">
                   <use
                     href="./images/backgroundicon/symbol-defs.svg#icon-instagram"
                   ></use></svg
               ></a>
             </li>
-            <li class="social-list__item">
-              <a class="social-list__link link" href="">
-                <svg class="social-list__icon">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon">
                   <use
                     href="./images/backgroundicon/symbol-defs.svg#icon-twitter"
                   ></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list__item">
-              <a class="social-list__link link" href="">
-                <svg class="social-list__icon">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon">
                   <use
                     href="./images/backgroundicon/symbol-defs.svg#icon-facebook"
                   ></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list__item">
-              <a class="social-list__link link" href="">
-                <svg class="social-list__icon">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon">
                   <use
                     href="./images/backgroundicon/symbol-defs.svg#icon-linkedin"
                   ></use>
